# GoonWorld

./: .gitignore  .gitmodules  .timetracker  CMakeLists.txt  Makefile  README.md  dmemcheck.txt  memcheck.txt
.github/workflows/: test.yml
GoonWorld/: BodyTypes.cs  GoonWorld.csproj  GoonWorld.sln  Program.cs
GoonWorld/GoonEngine/: Animator.cs  Api.cs  Debug.cs  Ecs.cs  Game.cs  GameObject.cs  Mathf.cs  Rect.cs  Sound.cs  Tiled.cs
GoonWorld/GoonEngine/base/: Component.cs  GameObject.cs  System.cs
GoonWorld/GoonEngine/common/: BoundingBox.cs  Color.cs  Point.cs  Rect.cs  Vector2.cs
GoonWorld/GoonEngine/components/: AnimationComponent.cs  DrawComponent.cs  KeyboardComponent.cs  LocationComponent.cs  PhysicsComponent.cs  ScriptComponent.cs  SpriteComponent.cs  TagComponent.cs  example_unsafe.cs
GoonWorld/GoonEngine/content/: Image.cs  Sfx.cs
GoonWorld/GoonEngine/ecs/: ECS.cs
GoonWorld/GoonEngine/interfaces/: IAnimate.cs  IComponent.cs  IDraw.cs  IStart.cs  ITakeDamage.cs  IUpdate.cs
GoonWorld/GoonEngine/systems/: DrawSystem.cs  LocationSystem.cs  UpdateSystem.cs
GoonWorld/assets/config/: appsettings.json
GoonWorld/assets/tiled/: level1.tmx
GoonWorld/models/: config.cs
GoonWorld/models/aseprite/: Document.cs
GoonWorld/models/components/: DrawComponent.cs  KeyboardComponent.cs  LocationComponent.cs  ScriptComponent.cs
GoonWorld/models/ecs/: Component.cs  UpdateData.cs
GoonWorld/models/engine/: Bgm.cs
GoonWorld/models/physics/: Body.cs  BoundingBox.cs  Overlap.cs  Vector2.cs
GoonWorld/objects/: Brick.cs  DeathBox.cs  Goomba.cs  ObjectBase.cs  Player.cs
assets/: memcheck.txt
assets/config/: appsettings.json
assets/img/: coin.json  fireball.json  fireflower.json  flags.json  goomba.json  itembox.json  mario.aseprite  mario.json  mushroom.json
assets/shaders/: f_tile.vs  fragment.vs  fragment_es.vs  tfragment.vs  v_tile.vs  vertex.vs  vertex_es.vs
assets/tiled/: background.tsj  blocks.tsj  goonDash.tiled-project  goonDash.tiled-session  level1.tmj  level1.tmx  level2.tmj  scenery.tsj  terrain.tsj
assets/tiled/templates/: coin.tx
include/GoonEngine/: Physics.h  SdlSurface.h  SdlWindow.h  Sound.h  color.h  gnpch.h  joystick.h  keyboard.h  point.h  test.h
include/GoonEngine/ecs/: component.h  context.h  entity.h  system.h
include/GoonEngine/ecs/components/: drawComponent.h  keyboardComponent.h  locationComponent.h  scriptComponent.h  tagComponent.h
include/GoonPhysics/: body.h  scene.h
src/GoonEngine/: debug.c  joystick.c  keyboard.c  test.c
src/GoonEngine/ecs/: component.c  context.c  entity.c  system.c
src/GoonEngine/ecs/components/: drawComponent.c  keyboardComponent.c  locationComponent.c  scriptCompoment.c  tagComponent.c
src/GoonEngine/scripting/: Physics.c  SdlSurface.c  SdlWindow.c  Sound.c
src/GoonPhysics/: body.c  gravity.c  scene.c
src/GoonWorld/: BodyTypes.hpp  ComponentTypes.hpp  SpawnMap.cpp  gnpch.hpp  main.cpp
src/GoonWorld/animation/: Animation.hpp  AnimationTransition.hpp  Animator.cpp  Animator.hpp
src/GoonWorld/base/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  UiObject.cpp  UiObject.hpp
src/GoonWorld/common/: Helpers.hpp  TimeSpan.hpp
src/GoonWorld/components/: AnimationComponent.cpp  AnimationComponent.hpp  BoxColliderComponent.cpp  BoxColliderComponent.hpp  DebugDrawComponent.cpp  DebugDrawComponent.hpp  PlayerInputComponent.cpp  PlayerInputComponent.hpp  RigidbodyComponent.cpp  RigidbodyComponent.hpp
src/GoonWorld/content/: Bgm.cpp  Bgm.hpp  Image.cpp  Image.hpp  Sfx.cpp  Sfx.hpp  Text.cpp  Text.hpp
src/GoonWorld/core/: Camera.cpp  Camera.hpp  Content.cpp  Content.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  Sound.cpp  Sound.hpp  Spritebatch.hpp  Tiled.cpp  Tiled.hpp  Timer.cpp  Timer.hpp
src/GoonWorld/events/: Event.hpp  EventTypes.hpp  Observer.cpp  Observer.hpp
src/GoonWorld/gameobjects/: Coin.cpp  Coin.hpp  DeathBox.cpp  DeathBox.hpp  Fireball.cpp  Fireball.hpp  Fireflower.cpp  Fireflower.hpp  Flag.cpp  Flag.hpp  GameObjects.hpp  Goomba.cpp  Goomba.hpp  ItemBox.cpp  ItemBox.hpp  ItemBrick.cpp  ItemBrick.hpp  Mushroom.cpp  Mushroom.hpp  Player.cpp  Player.hpp  WinBox.cpp  WinBox.hpp
src/GoonWorld/interfaces/: IDraw.hpp  IEnable.hpp  ILoad.hpp  ILoadContent.hpp  IReset.hpp  IStart.hpp  ITakeDamage.hpp  ITween.hpp  IUpdate.hpp
src/GoonWorld/models/: AppSettings.cpp  AppSettings.hpp  AsepriteDocument.cpp  AsepriteDocument.hpp
src/GoonWorld/platformer/: Helpers.cpp  Helpers.hpp
src/GoonWorld/shared/: Constants.cpp  Constants.hpp
src/GoonWorld/tiled/: Tiled.cpp  Tiled.hpp  TiledLevel.cpp  TiledLevel.hpp  TiledMap.cpp  TiledMap.hpp
src/GoonWorld/tween/: Tween.cpp  Tween.hpp
src/GoonWorld/ui/: BoxUi.cpp  BoxUi.hpp  CoinsCollected.cpp  CoinsCollected.hpp  LevelTimer.cpp  LevelTimer.hpp  LogoPanel.cpp  LogoPanel.hpp  Panel.cpp  Panel.hpp
src/tests/: main.c
terraform/: backend.tf  cloudfront.tf  s3.tf
